--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,14 +178,6 @@ a:after {
   text-align: center;
 }
 
-/* Portfolio Wrap */
-
-#portfoliowrap{
-  background: #0B6138;
-  padding-top: 70px;
-  padding-bottom: 70px;
-  text-align: center
-}
 
 #contactwrap{
   background: #003366;
@@ -196,23 +188,23 @@ a:after {
 
 /* Footer +plus Wrap */
 
-#contactwrap h3, #portfoliowrap h3 {
+#contactwrap h3 {
 	font-size: 28px;
 	font-weight: 700;
 	letter-spacing: 1px;	
 }
 
-#contactwrap i, #portfoliowrap i  {
+#contactwrap i {
 	font-size: 8px;
   padding: 3px;
 }
 
-#contactwrap p, #portfoliowrap p  {
+#contactwrap p {
 	font-size: 20px;
 	color: #f2f2f2;
 }
 
-#contactwrap img, #portfoliowrap img  {
+#contactwrap img {
 	text-align: center;
 }
 
