--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,21 @@ p {
   margin-top: -20px;
 }
 
+/* service icons */
+.si {
+  visibility: hidden;
+}
+
+.si:hover {
+  background-color: #ffffff;
+}
+
+.si i {
+  font-size: 40px;
+  padding: 20px;
+}
+
+
 /* Links */
 a {
     color: #f85c37;
@@ -160,7 +175,7 @@ a:after {
 }
 
 #aboutwrap p {
-  font-size: 21px;
+  font-size: 20px;
   color: #f2f2f2;
 }
 
@@ -181,10 +196,15 @@ a:after {
   background: #0B6138;
 }
 
+#portfoliowrap h4 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
 
 /* Footer +plus Wrap */
 
-#contactwrap h3, #portfoliowrap h3 {
+#contactwrap h3 {
 	font-size: 28px;
 	font-weight: 700;
 	letter-spacing: 1px;	
@@ -265,7 +285,7 @@ a:after {
 	position: absolute;
 	top: 0;
 	left: 60px;
-	background: #1a1a1a;
+	background: #5B3B8A;
 	width: 200px;
 	height: 100%;
 }
@@ -277,7 +297,7 @@ a:after {
 	letter-spacing: 0.15em;
 	line-height: 40px;
 	text-transform: uppercase;
-	color: #ffffff;
+	/*color: #ffffff;*/
 	margin-top: 20px;
 }
 
